// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerListSearchFiltersSelector /> renders as checkboxes 1`] = `
Array [
  <label
    className="EmployerListSearchFiltersSelector"
  >
    <input
      defaultChecked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      Foo Check 1
    </span>
  </label>,
  <label
    className="EmployerListSearchFiltersSelector"
  >
    <input
      defaultChecked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      Foo Check 2
    </span>
  </label>,
  <label
    className="EmployerListSearchFiltersSelector"
  >
    <input
      defaultChecked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      Foo Check 3
    </span>
  </label>,
]
`;

exports[`<EmployerListSearchFiltersSelector /> renders as radio buttons 1`] = `
Array [
  <label
    className="EmployerListSearchFiltersSelector"
  >
    <input
      defaultChecked={false}
      onChange={[Function]}
      type="radio"
    />
    <span>
      Foo Radio 1
    </span>
  </label>,
  <label
    className="EmployerListSearchFiltersSelector"
  >
    <input
      defaultChecked={true}
      onChange={[Function]}
      type="radio"
    />
    <span>
      Foo Radio 2
    </span>
  </label>,
  <label
    className="EmployerListSearchFiltersSelector"
  >
    <input
      defaultChecked={true}
      onChange={[Function]}
      type="radio"
    />
    <span>
      Foo Radio 3
    </span>
  </label>,
]
`;
